--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leon Tempate One</title>
+    <title>Leon Template One</title>
     <!-- main Tempate css file -->
     <link rel="stylesheet" href="css/Leon.css" />
     <!-- runder all alements normally -->
